--- a/src/main/resources/templates/project_detail.html
+++ b/src/main/resources/templates/project_detail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="./css/project_details">
+<link rel="stylesheet" th:href="@{/css/project_detail.css}">
 <title>Insert title here</title>
 </head>
 <body>
