--- a/src/main/resources/templates/project_detail.html
+++ b/src/main/resources/templates/project_detail.html
@@ -38,7 +38,7 @@
     </table>
 
     <div class="miniproject-titles">
-      <h1 class="miniproject-title">プロジェクトA</h1><h1><a class="insert-link" href="#">タスク追加</a></h1>
+      <h1 class="miniproject-title">ミニプロジェクトA</h1><h1><a class="insert-link" href="#">タスク追加</a></h1>
     </div>
     <div class="task-list">
       <table>
@@ -100,7 +100,7 @@
 
 <!-- プロジェクト繰り返し------------------------------------------ -->
     <div class="miniproject-titles">
-      <h1 class="miniproject-title">プロジェクトB</h1><h1><a class="insert-link" href="#">タスク追加</a></h1>
+      <h1 class="miniproject-title">ミニプロジェクトB</h1><h1><a class="insert-link" href="#">タスク追加</a></h1>
     </div>
     <div class="task-list">
       <table>
