--- a/src/main/resources/templates/update_task.html
+++ b/src/main/resources/templates/update_task.html
@@ -50,7 +50,7 @@
 
 		<span class="input-title">担当者</span>
 		<select class="input" th:field="*{mini_project_id}" id="">
-			<option value="1">選択してください</option>
+			<option value="1">金澤伸行</option>
 		</select>
 		<span class="tanni"></span>
 		<br>
