--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,28 @@
 <title>Insert title here</title>
 </head>
 <body>
+	<!----------------リンク---------------------------->
+	<a th:href="@{/project_detail}">プロジェクト詳細</a>
 	<a th:href="@{/registerTask}">タスク新規</a>
+
+	<!----------------検索フォーム----------------------->
 	<form th:action="@{/searchTask}" method="post">
+		<label>検索条件</label>
 		<input type="text" name="keyword">
+		<select name="status" />
+			<option value="100" selected="selected">ステータス</option>
+			<option value="0">保留</option>
+			<option value="1">開始前</option>
+			<option value="2">実行中</option>
+			<option value="3">完了</option>
+		</select>
+		<select name="priority">
+			<option value="100" selected="selected">優先度</option>
+			<option value="0">低</option>
+			<option value="1">中</option>
+			<option value="2">高</option>
+		</select>
+		<label>並び替え条件</label>
 		<select name="sort">
 			<option value="id">登録順</option>
 			<option value="status">ステータス</option>
@@ -24,6 +43,7 @@
 		</select>
 		<input type="submit" value="検索">
 	</form>
+	<!----------------検索結果-------------------------->
 	<div th:object="${result}" th:if="${result}">
 		<table border=1>
 			<tr>
@@ -42,8 +62,19 @@
 	    	<tr th:each="task:${result}">
 	    		<td th:text="${task.id}"></td>
 	    		<td th:text="${task.task_title}"></td>
-	    		<td th:text="${task.status}"></td>
-	    		<td th:text="${task.priority}"></td>
+	    		<td th:switch="${task.status}">
+	    			<span th:case="0">保留</span>
+	    			<span th:case="1">開始前</span>
+	    			<span th:case="2">実行中</span>
+	    			<span th:case="3">完了</span>
+	    			<span th:case="*">対象無し</span>
+	    		</td>
+	    		<td th:switch="${task.priority}">
+	    			<span th:case="0">低</span>
+	    			<span th:case="1">中</span>
+	    			<span th:case="2">高</span>
+	    			<span th:case="*">対象なし</span>
+	    		</td>
 	    		<td th:text="${task.started_date}"></td>
 	    		<td th:text="${task.predict_finished_date}"></td>
 	    		<td th:text="${task.explanation}"></td>
