--- a/src/main/resources/templates/register_task.html
+++ b/src/main/resources/templates/register_task.html
@@ -15,7 +15,8 @@
 		<br>
 
 		<span class="input-title">ステータス</span>
-		<select class="input" th:field="*{status}" id="">
+		<select class="input" th:field="*{status}" id="" />
+			<option value="100" selected="selected">選択してください</option>
 			<option value="0">保留</option>
 			<option value="1">開始前</option>
 			<option value="2">実行中</option>
@@ -25,7 +26,8 @@
 		<br>
 
 		<span class="input-title">優先度</span>
-		<select class="input" th:field="*{priority}" id="">
+		<select class="input" th:field="*{priority}" id="" />
+			<option value="100" selected="selected">選択してください</option>
 			<option value="0">低</option>
 			<option value="1">中</option>
 			<option value="2">高</option>
@@ -50,23 +52,24 @@
 
 		<span class="input-title">担当者</span>
 		<select class="input" th:field="*{mini_project_id}" id="">
-			<option value="1">選択してください</option>
+			<option value="0" selected="selected">選択してください</option>
+			<option value="1">金澤伸行</option>
 		</select>
 		<span class="tanni"></span>
 		<br>
 
 		<span class="input-title">完了率</span>
-		<input class="input text-right" type="number" th:fields="*{complete_rate}" max="100" min="0" placeholder="0">
+		<input class="input text-right" type="number" th:fields="*{complete_rate}" min="0" max="100" >
 		<span class="tanni">%</span>
 		<br>
 
 		<span class="input-title">固定費</span>
-		<input class="input text-right" type="number" th:field="*{fixed_cost}" min="0" placeholder="0">
+		<input class="input text-right" type="number" th:field="*{fixed_cost}" min="0">
 		<span class="tanni">円</span>
 		<br>
 
 		<span class="input-title">時間</span>
-		<input class="input text-right" type="number" th:field="*{required_time}" placeholder="0">
+		<input class="input text-right" type="number" th:field="*{required_time}" min=0>
 		<span class="tanni">分</span>
 		<br>
 
