--- a/src/main/resources/templates/project_list.html
+++ b/src/main/resources/templates/project_list.html
@@ -1,75 +1,60 @@
 <!DOCTYPE html>
-<html>
-  <head> 
-    <meta charset="utf-8"> 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-    <title>Puzzle2</title> 
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="stylesheet.css">
-  </head>
-    <body> 
-        <div class="wrapper"> 
-            <div class="top">
-              <div class="title">
-                <h1>プロジェクトの追加</h1>
-              </div>
-              <div class="new">
-                <table class="new_project">
-                  <tr class="new_project">
-                    <td class="new_project">プロジェクト名</td>
-                    <td class="new_project">
-                      <input type="text" placeholder="プロジェクト名">
-                    </td>
-                  </tr>
-                  <tr class="new_project">
-                    <td class="new_project">参加者</td>
-                    <td class="new_project">
-                      <input type="checkbox">hiruma
-                      <input type="checkbox">hiruma
-                      <input type="checkbox">hiruma
-                      <input type="checkbox">hiruma
-                    </td>
-                    <td class="new_project"><input type="submit"></td>
-                  </tr>
-                </table>
-              </div>
-            </div> 
-            <div class="main">
-            <div class="title">
-              <h1>プロジェクトリスト</h1>
-            </div>
-            <table border="1">
-              <tr>
-                <th>No.</th>
-                <th>プロジェクトのタイトル</th>
-                <th>プロジェクトマネージャー</th>
-                <th>会社名</th>
-                <th>日付</th>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>Aプロジェクト</td>
-                <td>hiru</td>
-                <td>YI</td>
-                <td>2021/01/01</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Bプロジェクト</td>
-                <td>hiru</td>
-                <td>YI</td>
-                <td>2021/01/01</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>Cプロジェクト</td>
-                <td>hiru</td>
-                <td>YI</td>
-                <td>2021/01/01</td>
-              </tr>
-            </table>
-            </div>
-        </div>
-    </body>
+<html xmlns:th="www.thymeleaf.org">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport"
+	content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+<title>プロジェクト一覧</title>
+<link rel="stylesheet" th:href="@{/css/reset.css}">
+<link rel="stylesheet" th:href="@{/css/stylesheet.css}">
+</head>
+<body>
+	<div class="wrapper">
+		 <div class="top">
+
+			プロジェクトの追加
+			<!-- <form th:action="@{/registerProject}" method ="post" class="new" th:object="${projectBean}">
+				<h1>プロジェクト追加</h1>
+				<span class="input-title">プロジェクト名</span>
+				<input class="input" type="text" th:field="*{project_name}">
+				<br>
+				<span class="input-title">manager_id</span>
+				<input class="input" type="number" th:field="*{manager_id}">
+				<br>
+				<span class="input-title">company_id</span>
+				<input class="input" type="number" th:field="*{company_id}">
+				<br>
+				<input type="hidden" th:field="*{created_at}" th:value="${now}">
+				<span class="input-title"></span>
+				<input  th:object="${now}" class="input button" type="submit" value="登録">
+			</form> -->
+
+		</div>
+		<div class="main">
+			<div class="title">
+				<h1>プロジェクトリスト</h1>
+			</div>
+			<!-- プロジェクト一覧 -->
+			<div th:object="${projects}" th:if="${projects}">
+				<table border="1">
+					<tr>
+						<th>No.</th>
+						<th>プロジェクトのタイトル</th>
+						<th>プロジェクトマネージャー</th>
+						<th>会社名</th>
+						<th>日付</th>
+					</tr>
+					<tr th:each="project : ${projects}">
+						<td th:text="${project.id}"></td>
+						<td th:text="${project.project_name}"></td>
+						<td th:text="${project.manager_id}"></td>
+						<td th:text="${project.company_id}"></td>
+						<td th:text="${project.created_at}"></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
