--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,7 +45,7 @@
 	</form>
 	<!----------------検索結果-------------------------->
 	<div th:object="${result}" th:if="${result}">
-		<table border=1>
+		<table>
 			<tr>
 		        <th class="task-width-200">ID</th>
 		        <th class="task-width-200">タスク名</th>
