--- a/src/main/resources/static/css/project_detail.css
+++ b/src/main/resources/static/css/project_detail.css
@@ -3,7 +3,9 @@
 .page-header{
   display: inline-block;
   width: 300px;
-  text-align: center;
+  text-align: left;
+  border-bottom:5px solid black;
+  margin-bottom:10px;
 }
 
 .font-pg-header{
@@ -31,7 +33,7 @@
 }
 
 .task-titles{
-  margin-top: 40px;
+
 }
 
 .project-detail-title{
@@ -56,7 +58,6 @@
 }
 
 .task-width-80{
-  /* background-color: red; */
   text-align: center;
   display: inline-block;
   width:80px;
@@ -68,7 +69,6 @@
 }
 
 .task-width-200{
-  /* background-color: blue; */
   text-align: center;
   display: inline-block;
   width:200px;
@@ -80,10 +80,11 @@
   width:150px;
 }
 
-.task-list{
-  border-bottom: solid 1px black;
-  width:1380px;
+.table-title{
+	font-weight:bold;
+	font-size:15px;
 }
+
 .task-button{
   margin-left: 5px;
   text-decoration: none;
@@ -119,6 +120,9 @@
   text-align: center;
 }
 
+.bg-gray{
+	background-color:gray;
+}
 h1{
   font-size: 20px;
 }
