--- a/src/main/resources/static/css/project_detail.css
+++ b/src/main/resources/static/css/project_detail.css
@@ -1,128 +1,54 @@
 @charset "UTF-8";
-
-.page-header{
-  display: inline-block;
-  width: 300px;
-  text-align: left;
-  border-bottom:5px solid black;
-  margin-bottom:10px;
+.main-right{
+	width:80%;
+	min-height:93vh;
+/* 	padding:20px 10px; */
 }
 
-.font-pg-header{
-  font-weight: bold;
-  font-size:20px;
+.project-titles{
+	padding:20px 0;
+	border-bottom:1px solid black;
 }
 
-.mini-project-form{
-  width: 500px;
-  margin-top:20px;
+.project-title{
+	font-size:30px;
 }
 
-.mini-project-text{
-  line-height: 40px;
-  width: 300px;
-  font-size:15px;
-}
-
-.mini-project-button{
-  display: inline-block;
-  background-color: green;
-  color: white;
-  line-height: 40px;
-  padding: 0 20px;
-}
-
-.task-titles{
-
-}
-
-.project-detail-title{
-  display: inline-block;
-  background-color: green;
-  color:white;
-  width: 900px;
-}
-
-.project-progres-title{
-  display: inline-block;
-  background-color: skyblue;
-  color:white;
-  width: 85px;
-}
-
-.project-progres-cost{
-  display: inline-block;
-  background-color: orange;
-  color:white;
-  width: 290px;
-}
-
-.task-width-80{
-  text-align: center;
-  display: inline-block;
-  width:80px;
-}
-
-.margin-r{
-  margin:0 1px 0 1px;
-  font-size: 3px;
-}
-
-.task-width-200{
-  text-align: center;
-  display: inline-block;
-  width:200px;
-}
-
-.task-width-150{
-  text-align: center;
-  display: inline-block;
-  width:150px;
-}
-
-.table-title{
-	font-weight:bold;
-	font-size:15px;
-}
-
-.task-button{
-  margin-left: 5px;
-  text-decoration: none;
-  background-color: black;
-  color: white;
-  display: inline-block;
-  padding: 0 5px;
-  width: 30px;
-  text-align: center;
-  font-size: 10px;
-  height: 25px;
-  line-height: 25px;
-}
-
-.miniproject-titles{
-  display: flex;
-}
-
-.miniproject-title{
-  width: 200px;
-}
-
-.insert-link{
-  text-decoration: none;
-  background-color: black;
-  display: inline-block;
-  color: white;
-  padding: 0 10px;
-  margin-left: 20px;
-  font-weight: normal;
-  border-radius: 20px;
-  width: 130px;
-  text-align: center;
-}
-
-.bg-gray{
+.add-task{
+	position:fixed;
+	right:50px;
+	bottom:50px;
+	font-size:30px;
 	background-color:gray;
+	padding:50px;
+	color:white;
+	border-radius:50%;
+	font-weight:bold;
 }
-h1{
-  font-size: 20px;
+
+.search-form{
+	background-color:yellow;
+	padding:20px 0;
+	border-bottom:1px solid black;
 }
+
+.tasks{
+	width:100%;
+	border-bottom:1px solid black;
+}
+
+.task-list-title{
+	text-align:center;
+	font-size:20px;
+	line-height:30px;
+	border-bottom:1px solid black;
+}
+
+.task-list-name{
+	text-align:center;
+	font-size:18px;
+	line-height:30px;
+	word-wrap: none;
+	margin-right:10px;
+}
+
