--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head> 
-    <meta charset="utf-8"> 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-    <title>ヘッダー</title> 
+    <title>ヘッダー</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="stylesheet.css">
   </head>
-    <body> 
+    <body>
         <header>
           <h2>
             <a href="/">タスクマネージャー</a>
           </h2>
-          <nav class="header_right">
+          <div class="header_right">
             <ul>
               <li><a href="#">top</a></li>
               <li><a href="#">ログアウト</a></li>
