--- a/src/main/resources/templates/project_list.html
+++ b/src/main/resources/templates/project_list.html
@@ -11,26 +11,6 @@
 </head>
 <body>
 	<div class="wrapper">
-		 <div class="top">
-
-			プロジェクトの追加
-			<!-- <form th:action="@{/registerProject}" method ="post" class="new" th:object="${projectBean}">
-				<h1>プロジェクト追加</h1>
-				<span class="input-title">プロジェクト名</span>
-				<input class="input" type="text" th:field="*{project_name}">
-				<br>
-				<span class="input-title">manager_id</span>
-				<input class="input" type="number" th:field="*{manager_id}">
-				<br>
-				<span class="input-title">company_id</span>
-				<input class="input" type="number" th:field="*{company_id}">
-				<br>
-				<input type="hidden" th:field="*{created_at}" th:value="${now}">
-				<span class="input-title"></span>
-				<input  th:object="${now}" class="input button" type="submit" value="登録">
-			</form> -->
-
-		</div>
 		<div class="main">
 			<div class="title">
 				<h1>プロジェクトリスト</h1>
@@ -48,8 +28,8 @@
 					<tr th:each="project : ${projects}">
 						<td th:text="${project.id}"></td>
 						<td th:text="${project.project_name}"></td>
-						<td th:text="${project.manager_id}"></td>
-						<td th:text="${project.company_id}"></td>
+						<td th:text="${project.user_name}"></td>
+						<td th:text="${project.company_name}"></td>
 						<td th:text="${project.created_at}"></td>
 					</tr>
 				</table>
