--- a/src/main/resources/templates/project_detail.html
+++ b/src/main/resources/templates/project_detail.html
@@ -9,12 +9,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<header>
-      <h2><a class="header-title delete-decoration" href="/">TaskManager</a></h2>
-      <div class="header-right">
-        <a class="header-link delete-decoration" href="#">top</a>
-        <a class="header-link delete-decoration" href="#">ログアウト</a>
-      </div>
+    <header>
+    	<div th:replace="header"></div>
     </header>
 
 	<div class="main">
