--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,20 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
     <title>ヘッダー</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="header.css">
   </head>
     <body>
-        <header>
-          <h2>
-            <a href="/">タスクマネージャー</a>
-          </h2>
-          <div class="header_right">
-            <ul>
-              <li><a href="#">top</a></li>
-              <li><a href="#">ログアウト</a></li>
-            </ul>
-          </div>
-        </header>
+      <h2><a class="header-title delete-decoration" href="/">TaskManager</a></h2>
+      <div class="header-right">
+        <a class="header-link delete-decoration" href="#">top</a>
+         <form class="header-form" th:action="@{/logout}" method="post">
+        	<input class="header-button"type="submit" value="ログアウト">
+        </form>
+      </div>
     </body>
 </html>
