--- a/src/main/resources/templates/register_task.html
+++ b/src/main/resources/templates/register_task.html
@@ -11,11 +11,7 @@
 </head>
 <body>
 	<header>
-      <h2><a class="header-title delete-decoration" href="/">TaskManager</a></h2>
-      <div class="header-right">
-        <a class="header-link delete-decoration" href="#">top</a>
-        <a class="header-link delete-decoration" href="#">ログアウト</a>
-      </div>
+    	<div th:replace="header"></div>
     </header>
 
 	<div class="main">
